--- a/webpages/Password Generator/style.css
+++ b/webpages/Password Generator/style.css
@@ -26,13 +26,16 @@ h1 {
 }
 
 input[type="text"] {
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
     margin-bottom: 10px;
     padding: 12px 20px;
     font-size: 16px;
-    width: 300px;
+    width: 400px;
 }
 
 input[type="number"] {
+    text-align: center;
     -webkit-appearance: none;
     margin: 10px 0;
     width: 300px;
@@ -64,6 +67,7 @@ button {
     color: white;
     padding: 14px 20px;
     margin-top: 10px;
+    margin-bottom: 20px;
     border: none;
     cursor: pointer;
     width: 300px;
